Created testing suite, with unit tests, to evaluate current diff algorithms

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,24 @@
 .DS_Store
+
+# Python cache files
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+
+# Test artifacts
+*.pyc
+.pytest_cache/
+.coverage
+htmlcov/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
